# learning_flask

./: Makefile  README.md  app.py  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
src/controller/: index.py  jsonapi.py
templates/: index.html
